# musium

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  all_albums.nql  all_artists.nql  all_tracks.nql  contributing.md  default.nix  flake.nix  index.html  mkdocs.yml  nixpkgs-pinned.nix  performance.md  process_listens.py  readme.md  sitemap.xml  todo.md
.github/workflows/: build.yml
README.theme/: index.html
api/: index.html
app/: Main.elm  Makefile  dark.css  elm-package.json  index.html  manifest.json  packages.dhall  psc-package.json  spago.dhall  spago.yaml  style.css
app/src/: About.purs  AlbumComponent.purs  AlbumListView.purs  AlbumView.purs  Cast.js  Cast.purs  Dom.js  Dom.purs  Event.purs  History.js  History.purs  Html.purs  Icons.purs  LocalStorage.js  LocalStorage.purs  Main.purs  Model.purs  NavBar.purs  Navigation.purs  NowPlaying.purs  QueueView.purs  Search.purs  State.purs  StatusBar.purs  Time.js  Time.purs  Var.js  Var.purs  View.purs
app3/: AndroidManifest.xml  build.gradle  build.xml  default.nix  local.properties
app3/src/main/: AndroidManifest.xml  MainActivity.kt
app3/src/nl/ruuda/mindec/: MainActivity.java
benches/: main.rs
building/: index.html
changelog/: index.html
configuration/: index.html
disks/: index.html
docs/: api.md  building.md  changelog.md  configuration.md  disks.md  highpass.md  index.md  lastfm-import.md  listenbrainz.md  loudness.md  performance.md  playcounts.md  rating.md  running.md  scrobbling.md  search.md  tagging.md  thumbnails.md  tradfri.md  webinterface.md
fuzz/: Cargo.toml  rust-toolchain
fuzz/fuzz_targets/: shuffle.rs
listenbrainz/: index.html
loudness/: index.html
performance/: index.html
running/: index.html
scrobbling/: index.html
search/: index.html  search_index.json
src/: Makefile  album_table.rs  build.rs  cast.rs  config.rs  database.rs  database.sql  database_utils.rs  db2.rs  error.rs  exec_pre_post.rs  filter.rs  flat_tree.rs  flat_trie.rs  history.rs  lib.rs  loudness.rs  main.rs  matcher.rs  mvar.rs  net.rs  playback.rs  playcount.rs  player.rs  prim.rs  queue.rs  scan.rs  search.rs  serialization.rs  server.rs  shuffle.rs  status.rs  string_utils.rs  systemd.rs  thumb_cache.rs  thumb_gen.rs  user_data.rs  waveform.rs  word_index.rs
tagging/: index.html
theme/: index.html  main.html
theme/README.theme/: index.html
thumbnails/: index.html
tools/: benchmark.py  benchmark_server.py  migrate_0.11.0.py  migrate_album_ids.py  migrate_thumbnails.py  scrobble.py
tradfri/: index.html
webinterface/: index.html
