[package]
name = "musium"
version = "0.0.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
edition = "2018"

[dependencies]
alsa                  = "0.4.2"
chrono                = "0.4.13"
crossbeam             = "0.3"
libc                  = "0.2.74"
nix                   = "0.15"
num_cpus              = "1.13"
parking_lot           = "0.11.2"
serde_json            = "1.0"
sqlite                = "0.26.0"
tiny_http             = "0.7.0"
unicode-normalization = "0.1.13"
url                   = "2.1"
walkdir               = "2.3"

[dependencies.claxon]
git = "https://github.com/ruuda/claxon"
rev = "1f868774a250f5937ae70c868d77d1b1479f1831"

[dependencies.sqlite3-sys]
# By default, the sqlite-sys crate vendors SQLite through sqlite3-src.
# I want to use the system SQLite instead, so turn off the default feature.
version = "0.13.0"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# If we use parallel codegen, Claxon does not get optimized properly, and the
# result will be slow, so disable parallel codegen.
codegen-units = 1
