[package]
name = "musium"
version = "0.0.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
edition = "2018"

[dependencies]
alsa                  = "0.6.0"
bs1770                = "1.0.0"
chrono                = "0.4.13"
crossbeam             = "0.3"
libc                  = "0.2.74"
num_cpus              = "1.13"
serde_json            = "1.0"
sqlite                = "0.26.0"
tiny_http             = "0.11.0"
unicode-normalization = "0.1.13"
url                   = "2.1"
walkdir               = "2.3"
wait-timeout          = "0.2.0"

[dependencies.nanorand]
# Shuffle is broken in 0.7.0. This was fixed in
# c6f380231d0931cc7664ac3c52fa4043b1439ce2,
# but there hasn’t been a new release since.
# We also shouldn't take too recent a version,
# because Rust 1.57 compatibility was broken in
# 4be7f33567a13769e3d128133d9e5b2fb7693ff7.
git = "https://github.com/Absolucy/nanorand-rs"
rev = "3440f2ca5241d9e63c3f6db680e0a895064943c1"

[dependencies.claxon]
git = "https://github.com/ruuda/claxon"
rev = "1f868774a250f5937ae70c868d77d1b1479f1831"

[dependencies.sqlite3-sys]
# By default, the sqlite-sys crate vendors SQLite through sqlite3-src.
# I want to use the system SQLite instead, so turn off the default feature.
version = "0.13.0"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# If we use parallel codegen, Claxon does not get optimized properly, and the
# result will be slow, so disable parallel codegen.
codegen-units = 1
