[package]
name = "musium-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.arbitrary]
version = "1.3.0"
features = ["derive"]

[dependencies.musium]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "shuffle"
path = "fuzz_targets/shuffle.rs"
test = false
doc = false
